tests/invalidTest/typeConvert/test_uint32.q
# EXPECT type cannot be converted
def uint16 test(){
     uint32 var0 = 4294967296
  return 0
}

